tests/__snapshots__/api-expect-only-fail-stderr.snap.txt
Error: The assertion was supposed to fail, but it passed.

Consider removing the '.fail' flag.

  2 | 
  3 | expect<string>().type.toBe<string>();
  4 | expect.only.fail<string>().type.toBe<string>();
    |             ~~~~
  5 | 
  6 | expect.only.fail<never>().type.toBe<string>();
  7 | 

      at ./__typetests__/expect-only-fail.tst.ts:4:13

Error: The assertion was supposed to fail, but it passed.

Consider removing the '.fail' flag.

  15 |   test("is skipped?", () => {
  16 |     expect<never>().type.toBe<void>();
  17 |     expect.only.fail<string>().type.toBe<string>();
     |                 ~~~~
  18 | 
  19 |     expect.only.fail<never>().type.toBe<void>();
  20 |   });

       at ./__typetests__/expect-only-fail.tst.ts:17:17

Error: The assertion was supposed to fail, but it passed.

Consider removing the '.fail' flag.

  29 | test.only("is number?", () => {
  30 |   expect.skip<string>().type.toBe<number>();
  31 |   expect.fail<number>().type.toBe<number>();
     |          ~~~~
  32 | 
  33 |   expect.fail<never>().type.toBe<void>();
  34 | });

       at ./__typetests__/expect-only-fail.tst.ts:31:10

